--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/quidados
 spring.datasource.username=root
-spring.datasource.password=11122005
+spring.datasource.password=ifsp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
