--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>8.0.30</version>       
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
