--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/quidados
 spring.datasource.username=root
 spring.datasource.password=ifsp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.ssl.key-store=classpath:springboot.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=springboot
+server.ssl.key-password=123456
+server.port=8443
