--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@
 # create-drop -> limpa as tabelas quando a aplicação parar de executar
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/quidados
-spring.datasource.username=root
-spring.datasource.password=usbw
+#spring.datasource.url=jdbc:mysql://localhost:3306/quidados
+#spring.datasource.username=root
+#spring.datasource.password=usbw
 
-# spring.datasource.url=jdbc:mysql://quidados.mysql.database.azure.com:3306/quidados
-# spring.datasource.username=Spring_ltp
-# spring.datasource.password=Ifsp2023
+spring.datasource.url=jdbc:mysql://quidados.mysql.database.azure.com:3306/quidados
+spring.datasource.username=Spring_ltp
+spring.datasource.password=Ifsp2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.ssl.key-store=classpath:springboot.p12
