--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.datasource.username=Spring_ltp
 spring.datasource.password=Ifsp2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-server.ssl.key-store=classpath:springboot.p12
-server.ssl.key-store-password=123456
-server.ssl.key-store-type=pkcs12
-server.ssl.key-alias=springboot
-server.ssl.key-password=123456
+#server.ssl.key-store=classpath:springboot.p12
+#server.ssl.key-store-password=123456
+#server.ssl.key-store-type=pkcs12
+#server.ssl.key-alias=springboot
+#server.ssl.key-password=123456
 server.port=8443
